--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4jVersion}</version>
     </dependency>
+    <dependency>
+    	<groupId>com.dxc</groupId>
+    	<artifactId>cherryCalc</artifactId>
+    	<version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
