--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
     	<artifactId>cherryCalc</artifactId>
     	<version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.21</version>            
+</dependency>
   </dependencies>
 
   <build>
