Added a fixed width column file writer. Converter.java is working. Each writer/reader gets only the needed config properties.

--- a/configTemplate.yaml
+++ b/configTemplate.yaml
@@ -1,10 +1,9 @@
 input:
- File: input.csv
+ file: input.csv
 
 output:
- File: output.csv
- ColumnWidths: 
+ file: output.csv
+ columnWidths: 
  - 20
- - 15
+ - 50
  - 10
- - 25	
