--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.dxc.system.Converter</mainClass>
+									<mainClass>com.dxc.main.app.ConverterApplication</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
@@ -95,7 +95,7 @@
 					<configuration>
 						<archive>
 							<manifest>
-								<mainClass>com.dxc.system.Converter</mainClass>
+								<mainClass>com.dxc.main.app.ConverterApplication</mainClass>
 							</manifest>
 						</archive>
 					</configuration>
